<resources>
    <string name="app_name">WildcatFreshFinds</string>
    <string name="right_claw_mark_of_a_tiger">Right claw mark of a tiger.</string>
    <string name="left_claw_mark_of_a_tiger">Left claw mark of a tiger.</string>
    <string name="tiger_mascot_for_landing_page">Tiger mascot for landing page.</string>
    <string name="the_name_of_the_app">The name of the app.</string>
    <string name="underline_for_the_app_name">Underline for the app name.</string>
    <string name="find_second_hand_goods_from_upper_classmen">FIND SECOND HAND GOODS\nFROM UPPER-CLASSMEN!</string>
    <string name="book_icon">Book Icon</string>
    <string name="uniform_icon">Uniform Icon</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="wildcat_fresh_finds">Wildcat\nFreshFinds</string>
    <string name="main_mascot">main mascot</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="create_an_account">Create an account</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="access_your_account">Access your account</string>
    <string name="wildcat_freshfinds">Wildcat\nFreshFinds</string>
    <string name="profile">Profile</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="john_doe">John Doe</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="star_icon">Star Icon</string>
    <string name="john_doe_email_com"><u>john.doe@email.com</u></string>
    <string name="pass_value">••••••••</string>
    <string name="edit">EDIT</string>
    <string name="settings">SETTINGS</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="transaction">Transaction</string>
    <string name="settings_lowercase">Settings</string>
    <string name="community_guidelines">COMMUNITY GUIDELINES</string>
    <string name="about_the_developers">ABOUT THE DEVELOPERS</string>
    <string name="log_out">LOG OUT</string>
    <string name="tweak_refine_and_rule_the_wildcat_marketplace">Tweak, refine, and rule the Wildcat marketplace!</string>
    <string name="developers">Developers</string>
    <string name="jude_mikael_valencia">Jude Mikael Valencia</string>
    <string name="developer_cs_student"><![CDATA[Developer & CS Student]]></string>
    <string name="valencia_desc">I\'m a 2nd-year Computer Science student at CIT-U, passionate about creating efficient and user-friendly applications. I developed this e-commerce app to help students buy and sell second-hand items easily.</string>
    <string name="shervin_dale_tabernero">Shervin Dale Tabernero</string>
    <string name="tabernero_desc">As a 2nd-year Computer Science student at CIT-U, I enjoy building practical and user-friendly applications. This e-commerce app helps students easily buy and sell second-hand items.</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="welcome_message">Welcome to Wildcat FreshFinds!</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="uniform">Uniform</string>
    <string name="book">Book</string>
    <string name="nothing_here">NOTHING HERE</string>
    <string name="no_items">There are no items for sale yet</string>
    <string name="meet_the_team">MEET THE TEAM</string>
    <string name="hi">Hi,</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="cancel">CANCEL</string>
    <string name="comm_guide"><u>Agree to the Community Guidelines</u></string>
    <string name="sell">SELL</string>

</resources>