<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomeActivity">
    <View
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/maroon"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ImageView
        android:id="@+id/main_mascot"
        android:layout_width="90dp"
        android:layout_height="120dp"

        android:src="@drawable/main_mascot"
        android:contentDescription="@string/main_mascot"
        android:padding="8dp"

        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/header"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintEnd_toStartOf="@id/app_name"
        />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:fontFamily="@font/anton_sc_regular"
        android:gravity="center_vertical"
        android:lineSpacingExtra="-24dp"
        android:text="@string/wildcat_fresh_finds"
        android:textColor="@color/gold"
        android:textSize="43sp"

        app:layout_constraintTop_toTopOf="@id/header"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintStart_toEndOf="@id/main_mascot"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/hi_label"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/full_name_label"
        app:layout_constraintBottom_toBottomOf="@id/full_name_label"

        android:layout_marginTop="10dp"

        android:gravity="center"
        android:text="@string/hi"
        android:textSize="21sp"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_regular"
        app:layout_constraintHorizontal_chainStyle="packed"

        />

    <TextView
        android:id="@+id/full_name_label"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toEndOf="@id/hi_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_text"

        android:layout_marginTop="10dp"

        android:gravity="center"
        android:text="@string/john_doe"
        android:textSize="20sp"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_bold"

        />
    <TextView
        android:id="@+id/welcome_text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/full_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/search_input"


        android:gravity="center"
        android:text="@string/welcome_message"
        android:textSize="20sp"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_regular"
        />





    <EditText
        android:id="@+id/search_input"

        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_max="350dp"

        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        android:elevation="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"

        android:hint="@string/search"
        android:textColorHint="@color/gold"
        android:textColor="@color/gold"
        android:fontFamily="@font/anybody_regular"
        android:background="@drawable/search_bg" />

        <Button
            android:id="@+id/all_category_button"

            android:layout_width="85dp"
            android:layout_height="35dp"

            app:layout_constraintTop_toBottomOf="@id/search_input"
            app:layout_constraintStart_toStartOf="@id/search_input"
            app:layout_constraintEnd_toStartOf="@id/uniform_category_button"
            android:layout_marginTop="15dp"
            android:text="@string/all"
            android:background="@drawable/category_active"
            android:textColor="@color/gold"
            android:fontFamily="@font/anybody_bold"
            />


    <Button
        android:id="@+id/uniform_category_button"

        android:layout_width="85dp"
        android:layout_height="35dp"

        app:layout_constraintTop_toBottomOf="@id/search_input"
        app:layout_constraintStart_toEndOf="@+id/all_category_button"
        app:layout_constraintEnd_toStartOf="@id/book_category_button"
        android:layout_marginTop="15dp"
        android:text="@string/uniform"
        android:background="@drawable/category_inactive"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_bold"
        />


    <Button
        android:id="@+id/book_category_button"

        android:layout_width="85dp"
        android:layout_height="35dp"

        android:layout_marginTop="15dp"
        android:background="@drawable/category_inactive"
        android:fontFamily="@font/anybody_bold"
        android:text="@string/book"

        android:textColor="@color/maroon"
        app:layout_constraintEnd_toEndOf="@id/search_input"
        app:layout_constraintStart_toEndOf="@id/uniform_category_button"
        app:layout_constraintTop_toBottomOf="@id/search_input" />

    <ImageView
        android:id="@+id/home_nav_icon"
        android:layout_width="42dp"
        android:layout_height="42dp"

        app:layout_constraintStart_toStartOf="@id/footer_nav_settings"
        app:layout_constraintTop_toTopOf="@id/footer_nav_settings"
        app:layout_constraintBottom_toTopOf="@id/home_nav_label"
        app:layout_constraintEnd_toStartOf="@id/cart_nav_icon"
        android:translationY="4dp"
        android:elevation="11dp"
        android:src="@drawable/home_icon"
        android:clickable="true"
        android:focusable="true" />

    <ImageView
        android:id="@+id/tiger_nothing_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/nothing_here_img"

        app:layout_constraintTop_toBottomOf="@id/uniform_category_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nothing_here_txt"

        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/nothing_here_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:text="@string/nothing_here"
        android:fontFamily="@font/anybody_black"
        android:textColor="@color/maroon"

        app:layout_constraintTop_toBottomOf="@id/tiger_nothing_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/no_items_txt"

        /> <!-- Apply to all views in the chain -->

    <TextView
        android:id="@+id/no_items_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/no_items"
        android:fontFamily="@font/anybody_regular"
        android:textColor="@color/gold"

        app:layout_constraintTop_toBottomOf="@id/nothing_here_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer_nav_settings"
 /> <!-- Apply here too -->


    <TextView
        android:id="@+id/home_nav_label"
        android:translationY="-5dp"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_nav_icon"
        app:layout_constraintBottom_toBottomOf="@id/footer_nav_settings"
        app:layout_constraintStart_toStartOf="@id/home_nav_icon"
        app:layout_constraintEnd_toEndOf="@id/home_nav_icon"
        android:gravity="center"
        android:elevation="12dp"
        android:text="@string/home"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_regular"

        />


    <ImageView
        android:id="@+id/cart_nav_icon"
        android:layout_width="42dp"
        android:layout_height="42dp"

        app:layout_constraintStart_toEndOf="@id/home_nav_icon"
        app:layout_constraintTop_toTopOf="@id/footer_nav_settings"
        app:layout_constraintBottom_toTopOf="@id/cart_nav_label"
        app:layout_constraintEnd_toStartOf="@id/transaction_nav_icon"
        android:translationY="4dp"
        android:elevation="12dp"
        android:src="@drawable/cart_icon"

        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/cart_nav_label"
        android:translationY="-5dp"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cart_nav_icon"
        app:layout_constraintBottom_toBottomOf="@id/footer_nav_settings"
        app:layout_constraintStart_toStartOf="@id/cart_nav_icon"
        app:layout_constraintEnd_toEndOf="@id/cart_nav_icon"
        android:gravity="center"
        android:elevation="11dp"
        android:text="@string/cart"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_regular"

        />


    <ImageView
        android:id="@+id/transaction_nav_icon"
        android:layout_width="42dp"
        android:layout_height="42dp"

        app:layout_constraintStart_toEndOf="@id/cart_nav_icon"
        app:layout_constraintTop_toTopOf="@id/footer_nav_settings"
        app:layout_constraintBottom_toTopOf="@id/transaction_nav_label"
        app:layout_constraintEnd_toStartOf="@id/profile_nav_icon"
        android:translationY="4dp"
        android:elevation="12dp"
        android:src="@drawable/transaction_icon"

        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/transaction_nav_label"
        android:translationY="-5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/transaction_nav_icon"
        app:layout_constraintBottom_toBottomOf="@id/footer_nav_settings"
        app:layout_constraintStart_toStartOf="@id/transaction_nav_icon"
        app:layout_constraintEnd_toEndOf="@id/transaction_nav_icon"
        android:gravity="center"
        android:elevation="11dp"
        android:text="@string/transaction"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_regular"

        />

    <ImageView
        android:id="@+id/profile_nav_icon"
        android:layout_width="42dp"
        android:layout_height="42dp"

        app:layout_constraintStart_toEndOf="@id/transaction_nav_icon"
        app:layout_constraintTop_toTopOf="@id/footer_nav_settings"
        app:layout_constraintBottom_toTopOf="@id/profile_nav_label"
        app:layout_constraintEnd_toEndOf="@id/footer_nav_settings"
        android:translationY="4dp"
        android:elevation="12dp"
        android:src="@drawable/profile_nav_icon"

        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/profile_nav_label"
        android:translationY="-5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_nav_icon"
        app:layout_constraintBottom_toBottomOf="@id/footer_nav_settings"
        app:layout_constraintStart_toStartOf="@id/profile_nav_icon"
        app:layout_constraintEnd_toEndOf="@id/profile_nav_icon"
        android:gravity="center"
        android:elevation="11dp"
        android:text="@string/profile"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_regular"

        />



    <View
        android:id="@+id/footer_nav_settings"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/footer_nav_bg"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"


        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>