<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:background="@color/maroon"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/main_mascot"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:src="@drawable/main_mascot"
            android:contentDescription="@string/main_mascot"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/anton_sc_regular"
            android:gravity="center_vertical"
            android:lineSpacingExtra="-24dp"
            android:text="@string/wildcat_fresh_finds"
            android:textColor="@color/gold"
            android:textSize="43sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_back"

        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="39sp"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_black"
        />

    <TextView
        android:id="@+id/welcome_back"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/login_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/access_account"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"

        android:text="@string/welcome_back"
        android:textSize="19sp"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_bold"
        />
    <TextView
        android:id="@+id/access_account"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/welcome_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_label"
        android:layout_marginStart="30dp"

        android:text="@string/access_your_account"
        android:textSize="14sp"
        android:textColor="@color/gold"
        android:fontFamily="@font/anybody_bold"
        />

    <TextView
        android:id="@+id/email_label"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/access_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_input"
        android:layout_marginStart="30dp"


        android:text="@string/email"
        android:textSize="16sp"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_bold"
        />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="46dp"

        app:layout_constraintTop_toBottomOf="@+id/email_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_label"
        android:padding="10dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_regular"
        android:textColorHint="@color/maroon"
        android:background="@drawable/gold_input"
        android:inputType="textEmailAddress"
        />



    <TextView
        android:id="@+id/password_label"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_input"
        android:layout_marginStart="30dp"


        android:text="@string/password"
        android:textSize="16sp"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_bold"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:padding="10dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_regular"
        android:textColorHint="@color/maroon"
        android:background="@drawable/gold_input"
        android:inputType="textPassword"

        app:layout_constraintTop_toBottomOf="@id/password_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        />




    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sign_in_label"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:textColor="@color/background"
        android:textSize="19sp"
        android:text="@string/login"
        android:fontFamily="@font/anybody_bold"
        android:background="@drawable/login_register_button"
        />

    <TextView
        android:id="@+id/sign_in_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/register_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_bold"
        android:layout_marginBottom="190dp"
        />

    <TextView
        android:id="@+id/sign_in_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/sign_in_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="175dp"
        android:text="@string/sign_in"
        android:textColor="@color/maroon"
        android:fontFamily="@font/anybody_regular"

        />

</androidx.constraintlayout.widget.ConstraintLayout>