<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <TextView
            android:id="@+id/full_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/anybody_bold"
            android:gravity="center"
            android:text="@string/john_doe"
            android:textColor="@color/maroon"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/welcome_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/hi_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hi_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/anybody_regular"
            android:gravity="center"
            android:text="@string/hi"
            android:textColor="@color/maroon"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@id/full_name_label"
            app:layout_constraintEnd_toStartOf="@id/full_name_label"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anybody_regular"
            android:gravity="center"
            android:text="@string/welcome_message"
            android:textColor="@color/maroon"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/search_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/full_name_label" />


        <EditText
            android:id="@+id/search_input"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/search_bg"
            android:elevation="20dp"
            android:fontFamily="@font/anybody_regular"
            android:hint="@string/search"
            android:padding="10dp"
            android:textColor="@color/gold"
            android:textColorHint="@color/gold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            app:layout_constraintWidth_max="350dp" />

        <Button
            android:id="@+id/all_category_button"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/category_active"
            android:fontFamily="@font/anybody_bold"
            android:text="@string/all"
            android:textColor="@color/gold"
            app:layout_constraintEnd_toStartOf="@id/uniform_category_button"
            app:layout_constraintStart_toStartOf="@id/search_input"
            app:layout_constraintTop_toBottomOf="@id/search_input" />


        <Button
            android:id="@+id/uniform_category_button"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/category_inactive"
            android:fontFamily="@font/anybody_bold"
            android:text="@string/uniform"
            android:textColor="@color/maroon"
            app:layout_constraintEnd_toStartOf="@id/book_category_button"
            app:layout_constraintStart_toEndOf="@+id/all_category_button"
            app:layout_constraintTop_toBottomOf="@id/search_input" />


        <Button
            android:id="@+id/book_category_button"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/category_inactive"
            android:fontFamily="@font/anybody_bold"
            android:text="@string/book"
            android:textColor="@color/maroon"
            app:layout_constraintEnd_toEndOf="@id/search_input"
            app:layout_constraintStart_toEndOf="@id/uniform_category_button"
            app:layout_constraintTop_toBottomOf="@id/search_input" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/product_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            android:visibility="gone" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/search_input"
            app:layout_constraintStart_toStartOf="@id/search_input"
            app:layout_constraintTop_toBottomOf="@id/uniform_category_button"
            tools:listitem="@layout/item_product"
            tools:visibility="visible" /> <androidx.constraintlayout.widget.Group
        android:id="@+id/group_nothing_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible" app:constraint_referenced_ids="tiger_nothing_img,nothing_here_txt,no_items_txt" />

        <ImageView
            android:id="@+id/tiger_nothing_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/nothing_here_img"
            app:layout_constraintBottom_toTopOf="@id/nothing_here_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uniform_category_button"
            app:layout_constraintVertical_bias="0.3" /> <TextView
        android:id="@+id/nothing_here_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anybody_black"
        android:text="@string/nothing_here"
        android:textColor="@color/maroon"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/no_items_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiger_nothing_img" />

        <TextView
            android:id="@+id/no_items_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/anybody_regular"
            android:text="@string/no_items"
            android:textColor="@color/gold"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nothing_here_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>